added generic support and subclass support
